--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.2
 whitenoise==5.3.0
 numpy==1.22.0
+google-api-python-client
+google-auth-httplib2 
+google-auth-oauthlib
